--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ nvidia-graphics-drivers (375.10-0~svn1) UNRELEASED; urgency=medium
       modules that were built against non-running kernels.
   * Update nv-readme.ids
   * Update symbols files
+  * nvidia-drm-master-dev.patch: refresh, fails to apply on 375.10.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Sat, 22 Oct 2016 13:51:08 +0100
 
