Add nvidia-user-pages.patch to fix kernel modules build failure on 4.9
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6959 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (367.57-2~svn0) UNRELEASED; urgency=medium
+
+  * Add nvidia-user-pages.patch to fix nvidia kernel module build failure
+    for Linux 4.9.
+
+ -- Luca Boccassi <luca.boccassi@gmail.com>  Tue, 08 Nov 2016 20:26:23 +0000
+
 nvidia-graphics-drivers (367.57-1) unstable; urgency=medium
 
   * New upstream long lived branch release 367.57 (2016-10-10).
