--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,7 @@ nvidia-graphics-drivers (375.20-0~svn1) UNRELEASED; urgency=medium
     - Added support for the RandR TILE property added in RandR 1.5.
   * Update symbols files
   * nvidia-drm-master-dev.patch: refresh, fails to apply on 375.10.
+  * Update nv-readme.ids
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Sat, 22 Oct 2016 13:51:08 +0100
 
