--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (375.20-0~svn1) UNRELEASED; urgency=medium
 
   * New upstream long lived branch release 375.20 (2016-11-18).
+    (Closes: #845000)
     - Added support for the following GPUs: GeForce GTX 1050,
       GeForce GTX 1050 Ti, Quadro M620, Quadro M5000 SE, Quadro M3000 SE
     - Fixed a bug that could cause displays in SLI Mosaic to blank when
