Ship non-glvnd EGL library in the libegl1-nvidia package
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/375@6981 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -47,6 +47,7 @@ nvidia-graphics-drivers (375.20-0~svn1) UNRELEASED; urgency=medium
   * Update nv-readme.ids
   * nvidia-user-pages.patch: drop, fixed upstream.
   * Add support for the xorg-video-abi-23 in the xserver-xorg-video-nvidia package.
+  * Ship non-glvnd EGL library in the libegl1-nvidia packages.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Sat, 22 Oct 2016 13:51:08 +0100
 
