--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (375.20-2) UNRELEASED; urgency=medium
+
+  * Bump xserver-xorg-core dependency to << 2:1.19.99 for ABI 23.
+    (Closes: #846030)
+
+ -- Luca Boccassi <luca.boccassi@gmail.com>  Sun, 27 Nov 2016 12:36:39 +0000
+
 nvidia-graphics-drivers (375.20-1) experimental; urgency=medium
 
   * New upstream long lived branch release 375.20 (2016-11-18).
