--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ nvidia-graphics-drivers (340.98-0~svn4stretch) UNRELEASED; urgency=medium
   * libnvidia-glcore: New package, split from libgl1-nvidia-glx.
   * libnvidia-cfg1: New package, split from libgl1-nvidia-glx.
   * Updated Danish (da) debconf translations by Joe Dalton.  (Closes: #830653)
+  * Updated Italian (it) debconf translations by Beatrice Torracca.
+    (Closes: #846933)
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 21 Apr 2016 16:41:52 +0200
 
