--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -1,13 +1,13 @@
-# Italian translation of nvidia-driver debconf messages.
-# Copyright (C) 2012, Beatrice Torracca <beatricet@libero.it>
+# Italian translation of nvidia-graphics-drivers debconf messages.
+# Copyright (C) 2016, nvidia-graphics-drivers package copyright holder.
 # This file is distributed under the same license as the nvidia-driver package.
-# Beatrice Torracca <beatricet@libero.it>, 2012.
+# Beatrice Torracca <beatricet@libero.it>, 2012, 2016.
 msgid ""
 msgstr ""
 "Project-Id-Version: nvidia-graphics-drivers\n"
 "Report-Msgid-Bugs-To: nvidia-graphics-drivers@packages.debian.org\n"
 "POT-Creation-Date: 2016-02-12 01:57+0100\n"
-"PO-Revision-Date: 2012-09-28 17:24+0200\n"
+"PO-Revision-Date: 2016-09-30 07:38+0200\n"
 "Last-Translator: Beatrice Torracca <beatricet@libero.it>\n"
 "Language-Team: Italian <debian-l10n-italian@lists.debian.org>\n"
 "Language: it\n"
@@ -59,6 +59,7 @@ msgstr ""
 msgid ""
 "Use the update-glx command to switch between different installed drivers."
 msgstr ""
+"Usare il comando update-glx per passare da un driver installato ad un altro."
 
 #. Type: boolean
 #. Description
