--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (375.20-3) UNRELEASED; urgency=medium
+
+  * nvidia-egl-common, nvidia-egl-icd: New packages for EGL as ICD via GLVND.
+
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 06 Dec 2016 10:46:42 +0100
+
 nvidia-graphics-drivers (375.20-2) experimental; urgency=medium
 
   * Bump xserver-xorg-core dependency to << 2:1.19.99 for ABI 23.
