overhaul package descriptions
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-stretch@7014 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -73,6 +73,7 @@ nvidia-graphics-drivers (304.132-0~svn4stretch) UNRELEASED; urgency=medium
     nvidia-driver-libs-i386 metapackage.
   * libnvidia-glcore: New package, split from libgl1-nvidia-glx.
   * libnvidia-cfg1: New package, split from libgl1-nvidia-glx.
+  * Overhaul package descriptions.
 
   [ Luca Boccassi ]
   * Add disable-mtrr.patch to disable MTRR in the kernel module if
