src:libglvnd is currently incompatible with our packaging
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7023 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ nvidia-graphics-drivers (367.57-3) UNRELEASED; urgency=medium
   * Updated Italian (it) debconf translations by Beatrice Torracca.
     (Closes: #846933)
   * Overhaul package descriptions.
+  * Add (Build)-Conflicts against currently incompatible libglvnd0 and
+    libglvnd-dev from src:libglvnd.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 07 Dec 2016 10:42:07 +0100
 
