finalize changelog for nvidia-graphics-drivers (370.28-2), upload to unstable
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/370@7025 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,13 @@
-nvidia-graphics-drivers (370.28-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (370.28-2) unstable; urgency=medium
 
   * Updated Italian (it) debconf translations by Beatrice Torracca.
     (Closes: #846933)
   * Overhaul package descriptions.
   * Add (Build)-Conflicts against currently incompatible libglvnd0 and
     libglvnd-dev from src:libglvnd.
+  * Upload to unstable.
 
- -- Andreas Beckmann <anbe@debian.org>  Wed, 07 Dec 2016 12:48:50 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 07 Dec 2016 13:03:23 +0100
 
 nvidia-graphics-drivers (370.28-1) experimental; urgency=medium
 
