finalize changelog for nvidia-graphics-drivers (375.20-3)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/375@7031 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-nvidia-graphics-drivers (375.20-3) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (375.20-3) experimental; urgency=medium
 
   * nvidia-egl-common, nvidia-egl-icd: New packages for EGL as ICD via GLVND.
   * libgl1-nvidia-glvnd-glx: New metapackage for the GLVND variant.
   * Merge changes from 370.28-2.
 
- -- Andreas Beckmann <anbe@debian.org>  Tue, 06 Dec 2016 10:46:42 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 07 Dec 2016 13:39:43 +0100
 
 nvidia-graphics-drivers (375.20-2) experimental; urgency=medium
 
