--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (375.20-4) unstable; urgency=medium
+
+  * Upload to unstable.  (Closes: #845638)
+
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 08 Dec 2016 17:23:29 +0100
+
 nvidia-graphics-drivers (375.20-3) experimental; urgency=medium
 
   * nvidia-egl-common, nvidia-egl-icd: New packages for EGL as ICD via GLVND.
