drop nvidia-user-pages.patch, fixed upstream
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@7041 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 nvidia-graphics-drivers (304.134-0~svn4wheezy) UNRELEASED; urgency=medium
 
   * New upstream legacy 304xx branch release 304.134 (2016-12-14).
-    * Fixed CVE-2016-7382.  (Closes: #848197)
+    * Fixed CVE-2016-7382.  (Closes: #848195)
     - Added support for X.Org xserver ABI 23 (xorg-server 1.19)
+    * Improved compatibility with recent Linux kernels.
   * New upstream legacy 304xx branch release 304.132 (2016-09-26).
     * Fixed CVE-2016-7382, CVE-2016-7389.  (Closes: #846331)
     - Added /var/log/dmesg to the list of paths which are searched by
@@ -72,8 +73,6 @@ nvidia-graphics-drivers (304.134-0~svn4wheezy) UNRELEASED; urgency=medium
     building on 4.3 or greater, where the deprecated APIs the kernel module
     uses are no longer exported, causing a failure when the module is
     loaded at runtime. (Closes: #809324)
-  * Add nvidia-user-pages.patch to fix nvidia kernel module build failure
-    for Linux 4.9 (367.57-2).
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 15 Dec 2016 02:42:52 +0100
 
