--- a/debian/changelog
+++ b/debian/changelog
@@ -58,13 +58,12 @@ nvidia-graphics-drivers (340.101-0~svn4jessie) UNRELEASED; urgency=medium
   * ignore_xen_on_arm.patch: Update to add workaround for conftest.sh to fix
     kernel module build failure on armhf by forcing XEN_PRESENT=0 when
     building on armhf, thanks to Luca (352.79-2).
-  * Add nvidia-user-pages.patch to fix nvidia kernel module build failure
-    for Linux 4.9, thanks to Luca (367.57-2).
   * nvidia-detect: Update list of newer PCI IDs from release 367.57.
   * Add B-D: dpkg-dev (>= 1.17) for dpkg-parsechangelog --show-field
     (352.79-6).
   * Build libnvidia-encode1 and libnvidia-ifr1 for armhf, too (352.79-10).
   * Stop shipping unused pci.ids file (352.21-1).
+  * control: Synchronize descriptions with unstable (370.28-2).
   * Add xorg-video-abi-23 as alternative dependency (375.20-1).
   * Bump Standards-Version to 3.9.8. No changes needed.
   * Update lintian overrides.
