--- a/debian/changelog
+++ b/debian/changelog
@@ -68,6 +68,10 @@ nvidia-graphics-drivers (340.101-0~svn4jessie) UNRELEASED; urgency=medium
   * Bump Standards-Version to 3.9.8. No changes needed.
   * Update lintian overrides.
 
+  [ Luca Boccassi ]
+  * Add drm-driver-legacy.patch to fix nvidia kernel module load issue on
+    Linux 4.9 and newer.
+
  -- Andreas Beckmann <anbe@debian.org>  Thu, 15 Dec 2016 11:21:31 +0100
 
 nvidia-graphics-drivers (340.96-1) jessie; urgency=medium
