--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (340.101-0~svn4jessie) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (340.101-1) jessie; urgency=medium
 
   * New upstream legacy 340xx branch release 340.101 (2016-12-14).
     * Fixed CVE-2016-8826.  (Closes: #848195)
@@ -67,12 +67,13 @@ nvidia-graphics-drivers (340.101-0~svn4jessie) UNRELEASED; urgency=medium
   * Add xorg-video-abi-23 as alternative dependency (375.20-1).
   * Bump Standards-Version to 3.9.8. No changes needed.
   * Update lintian overrides.
+  * Upload to jessie.
 
   [ Luca Boccassi ]
   * Add drm-driver-legacy.patch to fix nvidia kernel module load issue on
-    Linux 4.9 and newer. (Closes: #848514)
+    Linux 4.9 and newer.  (Closes: #848514)
 
- -- Andreas Beckmann <anbe@debian.org>  Thu, 15 Dec 2016 11:21:31 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 04 Jan 2017 13:31:29 +0100
 
 nvidia-graphics-drivers (340.96-1) jessie; urgency=medium
 
@@ -1508,89 +1509,6 @@ nvidia-graphics-drivers (310.14-1) experimental; urgency=low
       efi_enabled (310.14).
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 17 Oct 2012 19:54:34 +0200
-
-nvidia-graphics-drivers (304.134-0~svn4jessie) UNRELEASED; urgency=medium
-
-  * New upstream legacy 304xx branch release 304.134 (2016-12-14).
-    * Fixed CVE-2016-8826.  (Closes: #848195)
-    - Added support for X.Org xserver ABI 23 (xorg-server 1.19)
-    * Improved compatibility with recent Linux kernels.
-  * New upstream legacy 304xx branch release 304.132 (2016-09-26).
-    * Fixed CVE-2016-7382, CVE-2016-7389.  (Closes: #846331)
-    - Added /var/log/dmesg to the list of paths which are searched by
-      nvidia-bug-report.sh for kernel messages.
-    - Fixed a bug that caused kernel panics when using the NVIDIA driver on
-      v4.5 and newer Linux kernels built with CONFIG_DEBUG_VM_PGFLAGS.
-    * Improved compatibility with recent Linux kernels.
-
-  [ Andreas Beckmann ]
-  * Drop substitution backward-compatibility with EoL
-    nvidia-graphics-drivers-legacy-173xx and
-    nvidia-graphics-drivers-legacy-96xx in favor of a reduced diff to
-    nvidia-graphics-drivers-legacy-304xx and newer (304.88-5).
-  * Stop special-casing of the nvidia-alternative substitution (352.79-6).
-  * rules: Drop support for ancient .run layout (352.79-4).
-  * Drop support for backporting to squeeze (EoL) (304.88-4).
-  * nvidia-detect: Drop support for lenny and squeeze(-lts) (EoL) (352.79-5).
-  * Do not run dh_strip_nondeterminism, it may perform modifications not
-    permitted by the NVIDIA license (340.96-4).
-  * nvidia-glx, nvidia-kernel-*: Report the latest tested Linux version
-    that can build the kernel module in the package description (340.76-3).
-  * nvidia-kernel-source: Use reproducible timestamps and file order inside
-    /usr/src/nvidia-kernel.tar.bz2 (340.76-1).
-  * rules, rules.defs: Synchronize variable naming with unstable (352.79-3).
-  * rules, control: Synchronize substvars with unstable (352.79-3).
-  * get-orig-source: Synchronize with unstable (352.79-3).
-  * get-orig-source: Generate .orig-$ARCH.tar.gz for each architecture
-    (358.16-1).
-  * control: Synchronize descriptions with unstable.
-  * bug-script: Synchronize with unstable (352.79-3).
-  * bug-control.mk: New script to generate bug-control (352.79-4).
-  * bug-control, bug-script: Collect some information about OpenCL (352.79-6).
-  * Use nvidia:kmod:binary and nvidia:kmod:source substvars (304.88-5).
-  * Use an empty nvidia:legacy-check substvar for legacy packages (352.79-6).
-  * use-nv-kernel-ARCH.o_shipped.patch: Synchronize with unstable (304.88-5).
-  * separate-makefile-kbuild.patch: New, don't make all Makefile targets
-    available to Kbuild (352.79-6).
-  * KERNEL_UNAME.patch: New, allow usage of KERNEL_UNAME as in 355.xx onwards
-    (352.79-6).
-  * modernize-conftest.patch: Update the conftest.sh build_cflags() function
-    to the one from 352.79.
-  * use-kbuild-compiler.patch: New patch to build with Kbuild's version of the
-    compiler instead of system default, thanks to Luca (352.79-2).
-  * Use NVIDIA's conftest.sh script to determine settings during module build
-    instead of our manually maintained conftest.h header (352.79-2).
-  * conftest-verbose.patch: New patch to dump dynamically generated conftest
-    headers (352.79-2).
-  * conftest-via-kbuild.patch: New patch to call conftest.sh from within
-    kbuild (and therefore with kbuild's compiler and flags) as in 355.xx
-    (352.79-2).
-  * use-kbuild-flags.patch: New, use KBUILD_CFLAGS from Kbuild to
-    support building a 64-bit kernel module with 32-bit userspace (352.79-5).
-  * build-sanity-checks.patch: New, handle the conftest.sh sanity checks in
-    the modernized module build system (352.79-6).
-  * disable-cc_version_check.patch: New patch to disable a useless check that
-    tests the running kernel instead of the compilation target.
-  * Disable conftest.sh check xen_sanity_check.
-  * Pass only the kernel version via KERNEL_UNAME and let the module build
-    system figure out the paths (352.79-2).
-  * Clear ARCH variable from environment before module build, thanks to Luca
-    (352.79-2, 352.79-5).
-  * control: Synchronize descriptions with unstable (370.28-2).
-  * Add xorg-video-abi-23 as alternative dependency (375.20-1).
-  * Bump Standards-Version to 3.9.8. No changes needed.
-  * Update lintian overrides.
-
-  * Add B-D: dpkg-dev (>= 1.17) for dpkg-parsechangelog --show-field
-    (352.79-6).
-
-  [ Luca Boccassi ]
-  * Add disable-mtrr.patch to disable MTRR in the kernel module if
-    building on 4.3 or greater, where the deprecated APIs the kernel module
-    uses are no longer exported, causing a failure when the module is
-    loaded at runtime. (Closes: #809324)
-
- -- Andreas Beckmann <anbe@debian.org>  Thu, 15 Dec 2016 02:42:52 +0100
 
 nvidia-graphics-drivers (304.131-1) wheezy; urgency=medium
 
