Update nv-readme.ids for 378.09
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/378@7134 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,9 @@ nvidia-graphics-drivers (378.09-1~svn1) UNRELEASED; urgency=medium
     /usr/share/nvidia/nvidia-application-profiles-key-documentation
     (Closes: #825637)
 
+  [ Luca Boccassi ]
+  * Update nv-readme.ids fro 378.09
+
  -- Andreas Beckmann <anbe@debian.org>  Thu, 05 Jan 2017 14:35:53 +0100
 
 nvidia-graphics-drivers (375.26-1) unstable; urgency=medium
