Update symbols files
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/378@7136 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,7 @@ nvidia-graphics-drivers (378.09-1~svn1) UNRELEASED; urgency=medium
   [ Luca Boccassi ]
   * Update nv-readme.ids fro 378.09
   * Refresh nvidia-drm-master-dev.patch for 378.09 to remove fuzz
+  * Update symbols files for 378.09
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 05 Jan 2017 14:35:53 +0100
 
