--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,9 @@ nvidia-graphics-drivers (378.09-1~svn1) UNRELEASED; urgency=medium
   * Update nv-readme.ids fro 378.09
   * Refresh nvidia-drm-master-dev.patch for 378.09 to remove fuzz
   * Update symbols files for 378.09
+  * Add support and virtual provides for OpenCL 2.0. Although 2.0 symbols have
+    appeared in the shared library there is no mention in the changelog yet,
+    which indicates support might still be experimental.
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 05 Jan 2017 14:35:53 +0100
 
