--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,10 @@ nvidia-graphics-drivers (378.09-1~svn1) UNRELEASED; urgency=medium
   * Add support and virtual provides for OpenCL 2.0. Although 2.0 symbols have
     appeared in the shared library there is no mention in the changelog yet,
     which indicates support might still be experimental.
+  * Rename libnvidia-egl-wayland -> libnvidia-egl-wayland1 to follow SONAME
+    change
+  * Add new nvidia-egl-wayland-icd and nvidia-egl-wayland-common packages to
+    add support for the new EGL external platform infrastructure
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 05 Jan 2017 14:35:53 +0100
 
